Text Align Correction @services-transparent

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -467,7 +467,7 @@
       }
       p{
           margin: 20px;
-          text-align: center;
+          font-size: 15px;
       }
   }
 }
